---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2019.11.12
  Bugfixes:
    - Fixed crash when entering a mini-tutorial

---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2019.8.23
  Optimisations:
    - Required everything locally
    - Basic optimizations to on_tick and tilegrid rendering logic
    - Restructured the mod to be slimmer and removed a bunch of unnecessary code
    - The mod no longer uses update time when no tilegrids are being actively drawn or perished
  Changes:
    - New Tapeline icon (again!)
    - Shortcut tooltip now shows the keybinding again
    - Removed delete confirmation window in favor of simply clicking the delete button again to confirm
    - Changed grid type dropdown to a switch
    - The tilegrid you are currently editing now blinks
    - Switched to new built-in slider snapping functionality
    - Divisor textfield now behaves better, and supports enter-to-confirm

---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2019.6.27
  Features:
    - Added tilegrid settings GUI
    - Added the ability to restrict a tilegrid to cardinal directions when drawing
    - Added semi-permanent tilegrids that can be edited or dismissed
  Changes:
    - Completely rewrote the mod to draw the tilegrid as you drag, instead of using a selection tool
    - Refined tapeline icon
    - Converted visual tilegrid settings to map settings to keep consistency in multiplayer

---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2019.6.14
  Changes:
    - Organized mod settings
    - Removed limitations on line width setting
    - Removed "tapeline tool" item from item filters list
    - Removed hotkey definition from shortcut button label
    - Various small optimizations
