@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: 2019.11.12
+  Optimisations:
+    - Significantly reduced the amount of tilegrid updates when using restrict to cardinals mode
   Bugfixes:
     - Fixed crash when entering a mini-tutorial
 
